apps/bookstack/bookstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: bookstack
  name: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bookstack
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/bookstack-default: "true"
        io.kompose.service: bookstack
    spec:
      containers:
        - env:
            - name: APP_URL
              value: https://bookstack.example.com
            - name: DB_DATABASE
              value: bookstackapp
            - name: DB_HOST
              value: bookstack-db
            - name: DB_PASS
              value: <yourdbpass>
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: lscr.io/linuxserver/bookstack
          name: bookstack
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: bookstack-claim0
      restartPolicy: Always
      volumes:
        - name: bookstack-claim0
          persistentVolumeClaim:
            claimName: bookstack-claim0
status: {}
