apps/bookstack/bookstack-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
spec:
  selector:
    io.kompose.service: bookstack-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
